[build-system]
requires = ["setuptools ~= 68.2.0", "wheel ~= 0.41.2", "setuptools-pipfile ~= 0.7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycracks"
authors = [
    {name = "Ezequiel L. Castaño", email = "castanoezequielleonardo@gmail.com"},
]
description = "Detect Breaking Changes with Python."
license = { text = "MIT" }
requires-python = ">=3.8"
dynamic = ['version', 'readme']
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Framework :: Hypothesis",
  "Framework :: Pytest",
  "Environment :: Console",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Version Control :: Git",
  "Typing :: Typed"
]

[project.urls]
homepage = "https://github.com/elc/pycracks"
documentation = "https://github.com/elc/pycracks"
repository = "https://github.com/elc/pycracks"
changelog = "https://github.com/ELC/pycracks/blob/master/CHANGELOG.md"

[project.scripts]
pycracks = "pycracks.__main__:app"

[tool.setuptools.package-data]
pycracks = ["py.typed", "*.md"]

[tool.setuptools.dynamic]
version = {attr = "pycracks.__version__"}
readme = {file = ["README.md"]}

[tool.setuptools-pipfile]

[tool.semantic_release.branches.main]
match = "(master|develop)"

[tool.semantic_release]
commit_message = "chore(release): bump version and update changelog [skip ci]"
version_source = "tag"
version_variables = [
    "pycracks/__init__.py:__version__",
]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    "chore*",
    "Merge*"
]

[tool.semantic_release.commit_parser_options]
allowed_tags = ["chore", "feat", "fix"]
minor_tags = ["feat"]
patch_tags = ["fix"]

[tool.coverage.run]
relative_files = true
